--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,4 +20,25 @@ jobs:
             
             - name: Build web app
               run: ./scripts/buildprod.sh
+
+    job_id:
+        permissions:
+          contents: 'read'
+          id-token: 'write'
+        runs-on: ubuntu-latest
+
+        steps:
+            - id: 'auth'
+              uses: 'google-github-actions/auth@v2'
+              with:
+                workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+                service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+
+            - name: 'Set up Cloud SDK'
+              uses: 'google-github-actions/setup-gcloud@v2'
+              with:
+                version: '>= 363.0.0'
+
+            - name: 'Use gcloud CLI'
+              run: 'gcloud info'
         
