--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,4 +38,7 @@ jobs:
 
             - name: 'Use gcloud CLI'
               run: 'gcloud info'
+
+            - name: 'Build gcloud Docker Image'
+              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest .'
         
