--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,5 +40,5 @@ jobs:
               run: 'gcloud info'
 
             - name: 'Build gcloud Docker Image'
-              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest .'
+              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest Dockerfile'
         
