--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,9 +36,6 @@ jobs:
             - name: 'Set up Cloud SDK'
               uses: 'google-github-actions/setup-gcloud@v2'
 
-            - name: 'Use gcloud CLI'
-              run: 'gcloud info'
-
             - name: 'Build gcloud Docker Image'
-              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest Dockerfile'
+              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest .'
         
