--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,5 +37,5 @@ jobs:
               uses: 'google-github-actions/setup-gcloud@v2'
 
             - name: 'Build gcloud Docker Image'
-              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest .'
+              run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest ./'
         
