--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,4 +34,7 @@ jobs:
 
             - name: 'Build gcloud Docker Image'
               run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest .'
+
+            - name: Deploy to Cloud Run
+              run: gcloud run deploy notely --image us-central1-docker.pkg.dev/PROJECT_ID/REPO_NAME/IMAGE:TAG --region us-central1 --allow-unauthenticated --project PROJECT_ID --max-instances=4
         
