--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,9 @@ jobs:
           id-token: 'write'
         runs-on: ubuntu-latest
 
+        env:
+            DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
         steps:
             - name: Check out code
               uses: actions/checkout@v4
@@ -20,8 +23,8 @@ jobs:
               uses: actions/setup-go@v5
               with:
                 go-version: "1.23.0"
-            
-            - name: Build web app
+
+            - name: Build Web App
               run: ./scripts/buildprod.sh
 
             - id: 'auth'
@@ -34,6 +37,12 @@ jobs:
 
             - name: 'Build gcloud Docker Image'
               run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest .'
+
+            - name: Install Goose Migration Tool
+              run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+            - name: Migrate DB Schema
+              run: ./scripts/migrateup.sh
 
             - name: Deploy to Cloud Run
               run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-451900/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-451900 --max-instances=4
